--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
 .header {
     font-size: 2.5em;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
