--- a/home-page-style.css
+++ b/home-page-style.css
@@ -7,7 +7,14 @@ header {
     background-color: #3f3f3f;
     color: white;
 }
+a:hover {
+    /* color: aliceblue; */
+    background-color: beige;
+}
 
+a{
+    color: rgb(201, 159, 97);
+}
 /* div.input {
     float: right;
 } */
