--- a/home-page-style.css
+++ b/home-page-style.css
@@ -1,6 +1,7 @@
 .container {
     width: 1000px;
     margin:auto;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 header {
     height: 60px;
@@ -12,8 +13,11 @@ a:hover {
     color: #3f3f3f;
 }
 
+.imageClick:hover{
+    background-color:#ffff;
+}
+
 a{
-    /* color: rgb(201, 159, 97); */
     color: #ff9900;
     text-decoration: none;
 }
@@ -22,7 +26,7 @@ p {
     word-break: break-word;
     font-size: 13px;
     color: #868686;
-    font-family: sans-serif;
+    /* font-family: sans-serif; */
 }
 
 .footerDiv {
