--- a/home-page-style.css
+++ b/home-page-style.css
@@ -82,6 +82,98 @@ p {
     border-radius: 5px;
 }
 body  {
-    background-image: url("../PWWW20-21_Gr2/fotoHomePage/blur3.jpg");
+    background-image: url("../PWWW20-21_Gr2/images/blur3.jpg");
     background-size: cover;
+}
+
+
+.icons {
+    width: 250px;
+    height: 50px;
+    background-color: #3f3f3f;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    right: 0;
+    justify-content: flex-end;
+    /* position: absolute; */
+    /* right: 30px; */
+  }
+  
+  .icon {
+    width: 32px;
+    height: 32px;
+    margin-left: 5px;
+    background-color: #1f1f1f;
+    border-radius: 50%;
+  }
+  .icon--linkedin {
+    background-image: url(./icons/icon-linkedin.png);
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  .icon--twitter {
+    background-image: url(./icons/icon-twitter.png);
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  .icon--pinterest {
+    background-image: url(./icons/icon-pinterest.png);
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  .icon--google-plus {
+    background-image: url(./icons/icon-google-plus.png);
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  .icon--rss {
+    background-image: url(./icons/icon-rss.png);
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  .mySlide {
+      display: none;
+  }
+
+
+  .fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @-webkit-keyframes fade {
+    from {
+      opacity: 0.4;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  
+  @keyframes fade {
+    from {
+      opacity: 0.4;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  
+  .rectangle {
+    background-color: #fe9900; 
+    width: 200px; 
+    height: 15px;
+    border-right: 5px;
+    border-style: solid;
+    border-color: #ffffff;
+  }
+
+  .active, 
+  .rectangle:hover {
+    background-color: #fff;
+    cursor: pointer;
   }
