--- a/css/login-page-style.css
+++ b/css/login-page-style.css
@@ -19,3 +19,18 @@ label {
   width: 100;
   height: 50;
 } */
+
+.Login-btn {
+  background-color: #ff9900;
+  height: 30px;
+  border: none;
+  color: white;
+  font-weight: bold;
+  border-radius: 10px;
+}
+
+.Login-btn:hover {
+  background-color: white;
+  color: #ff9900;
+  cursor: pointer;
+}
