Fixes on home page for slider

--- a/css/home-page-style.css
+++ b/css/home-page-style.css
@@ -16,8 +16,12 @@ a:hover {
   color: #3f3f3f;
 }
 
-.imageClick:hover {
-  background-color: #ffff;
+#a-here:hover{
+  background-color: inherit;
+  color: #ff9900;
+}
+.imageClick:hover{
+  background-color:#ffff;
 }
 
 a {
