Fixed home_page slides with images

--- a/css/home-page-style.css
+++ b/css/home-page-style.css
@@ -16,6 +16,10 @@ a:hover {
   color: #3f3f3f;
 }
 
+#a-here:hover{
+  background-color: inherit;
+  color: #ff9900;
+}
 .imageClick:hover{
   background-color:#ffff;
 }
@@ -134,9 +138,8 @@ body  {
 }
 
 .mySlide {
-    display: none;
+  display: none;
 }
-
 
 .fade {
   -webkit-animation-name: fade;
