--- a/css/login-page-style.css
+++ b/css/login-page-style.css
@@ -40,3 +40,14 @@ label {
 .th {
   border: 1px solid black;
 }
+
+#application-form > label {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  width: 80%;
+  padding-bottom: 1.5rem;
+}
+#application-form input, select {
+  margin-left: 1rem;
+}
