--- a/css/home-page-style.css
+++ b/css/home-page-style.css
@@ -215,3 +215,208 @@ body{
   background-color: #fff;
   cursor: pointer;
 }
+
+label {
+  display: table-cell; 
+  color:#868686;
+}
+
+.img-div {
+  width: 960px; 
+  height: 340px; 
+  background-color: #3f3f3f; 
+  margin-left: 20px;
+}
+
+.scroll-img {
+  background-color: #fe9900; 
+  height: 15px; 
+  display: flex;
+}
+
+.st-section {
+  background-color: #e1e1e1;
+}
+
+.nd-section {
+  margin-left: 20px; 
+  margin-right: 20px; 
+  background-color: #ffffff;
+}
+
+.rd-section {
+  margin-left: 30px; 
+  margin-right: 30px;
+}
+
+.you-here {
+  height: 55px; 
+  margin-left: -30px; 
+  margin-right: -30px; 
+  background-color: #f0f0f0; 
+  align-items: center; 
+  display: flex;
+}
+
+.welcome-title {
+  text-align: center; 
+  font-size: 65px; 
+  margin-top: 45px; 
+  color: #dddddd;
+}
+
+.description {
+  font-size: 2rem; 
+  text-align: center;
+}
+
+.hr-after-title {
+  margin-top: 50px; 
+  margin-bottom: 50px;
+}
+
+.outer-div {
+  margin-bottom: 20px; 
+  height:fit-content; 
+  display: flex;
+}
+
+.left-div{
+  width: 440px; 
+  float: left; 
+  word-break: break-all; 
+  margin-right: 10px;
+}
+
+.right-div {
+  width: 440px; 
+  float: right; 
+  word-break: break-all; 
+  margin-left: 10px;
+}
+
+.left-div div {
+  margin-bottom: 50px; 
+  height: fit-content;
+}
+
+.sayings {
+  align-items: center; 
+  display: flex; 
+  color: black; 
+  font-size: 18px;
+}
+
+.header-say {
+  color: #666666; 
+  font-size: 25px; 
+  margin-bottom: 20px;
+}
+
+div p img {
+  margin-right: 10px; 
+  margin-bottom: 5px;
+}
+
+.auth-say {
+  font-size: 15px; 
+  color: #868686;
+}
+
+.ekipi-div {
+  margin-bottom: 50px; 
+  height: fit-content;
+}
+.ekipi-name {
+  font-weight: bold;  
+  color: black; 
+  font-size: 18px; 
+  margin-bottom: 5px;
+}
+
+.p-img {
+  align-items: center; 
+  display: flex;
+}
+
+.second-hr {
+  margin-top: 30px; 
+  margin-bottom: 50px;
+}
+
+.mb-table {
+  margin-bottom: 50px;
+}
+
+.table-td {
+  width: 210px; 
+  padding-right: 30px;
+}
+
+.last-work {
+  width: 200px; 
+  display: block; 
+  margin-right: 20px;
+}
+
+.last-work-head {
+  color: #666666; 
+  font-size: 25px; 
+  margin-bottom: 20px;
+}
+
+.wb-br {
+  word-break: break-word;
+}
+
+.twitter-div {
+  display: flex; 
+  height: auto; 
+  padding-bottom: 30px; 
+  align-items: center;
+}
+
+.twitter-div p {
+  font-size: 20px; align:left;  color: #666666; margin-left: 20px;
+}
+
+.st-footer-div {
+  display: flex; 
+  height: 216px; 
+  margin: 0px 20px 0px 20px;
+}
+
+.st-footer-div div, address {
+  width: 225px; margin-right: 20px;
+}
+
+.kthehu-btn {
+  padding-left: 5px; 
+  padding: 5px; 
+  margin-left: 35px;
+}
+
+.last-footer-div {
+  display: flex; 
+  align-items: center; 
+  height: 60px; 
+  background-color: #000000;
+}
+
+.last-footer-div p {
+  margin-left: 20px;
+}
+
+.notif-p {
+  margin-top: 8px; 
+  margin-bottom: 8px;
+}
+
+.notif-a {
+  float: right; 
+  font-size: 12px;
+}
+
+.mb-ten {
+  margin-bottom: 10px;
+}
